--- a/style_teacher.css
+++ b/style_teacher.css
@@ -178,12 +178,13 @@ header {
 /* ===== Section : project ===== */
 .project-inner {
   height: 100%;
-  background-color: white;
-  border: 1px solid gray;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  overflow: hidden;
 }
 
 .tabs {
-  height: 100%;
+  border: 5px solid red;
   width: 300%;
   transition: 0.5s;
 }
@@ -204,55 +205,9 @@ header {
   width: 25%;
 }
 
-.project-description {
-  padding: 40px;
-}
-
-.project-description > div {
-  margin-bottom: 40px;
-}
-
-.detail2 ul li {
-  margin-bottom: 15px;
-}
-
-.detail2 ul li i {
-  font-size: 10px;
-  font-weight: normal;
-}
-
-.detail2 ul li span {
-  font-weight: bold;
-}
-
-.detail3 div {
-  height: 100%;
-  text-align: center;
-}
-
-.detail3 div .number {
-  font-size: 30px;
-  font-weight: bold;
-  display: inline-block;
-  padding-bottom: 5px;
-}
-
-.detail3 div .text {
-  font-size: 13px;
-  color: #ccc;
-}
-
-.project-btn {
-  width: 170px;
-  height: 30px;
-  background-color: gray;
-  color: white;
-  outline: none;
-  border: none;
-}
-
 .project-photo {
   width: 75%;
+  overflow: hidden;
 }
 
 input[name="tabmenu"] {
@@ -267,13 +222,6 @@ input[name="tabmenu"] {
   text-align: center;
 }
 
-.btn label:before {
-  width: 17px;
-  height: 17px;
-  border-radius: 50%;
-  border: gray;
-}
-
 .btn label {
   cursor: pointer;
   width: 5px;
@@ -282,16 +230,36 @@ input[name="tabmenu"] {
   display: inline-block;
   border-radius: 50%;
   margin: 8px;
+  position: relative;
 }
 
-input[id="tab1"]:checked ~ .btn label[for="tab1"] {
-  color: red;
+/* 중요내용
+
+position : absolute 또는 diplay: inline-block, diplay: block은
+block 요소처럼 크기 값을 가지게 됨.
+inline 요소는 크기값을 가질 수 없다. 그래서 아무리 크기에 대한 css를 먹여도 전혀 변화가 없다는 것을 알자!! 중요함.
+
+시간 날 때 꼭 체크하도록 하자.
+
+*/
+
+.btn label:before {
+  position: absolute;
+  content: "";
+  display: inline-block;
+  border: 1px solid transparent;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  left: -6px;
+  top: -6px;
+  transition: 0.3s;
 }
-input[id="tab2"]:checked ~ .btn label[for="tab2"] {
-  color: red;
-}
-input[id="tab3"]:checked ~ .btn label[for="tab3"] {
-  color: red;
+
+input[id="tab1"]:checked ~ .btn label[for="tab1"]:before,
+input[id="tab2"]:checked ~ .btn label[for="tab2"]:before,
+input[id="tab3"]:checked ~ .btn label[for="tab3"]:before {
+  border: 1px solid #aaa;
 }
 
 input[id="tab1"]:checked ~ .tabs {
@@ -306,67 +274,80 @@ input[id="tab3"]:checked ~ .tabs {
 
 /* ===== Section : plan ====== */
 .plan-inner {
+  background-color: #1d1b24;
   height: 100%;
 }
 
 .plan-feature {
   width: 80%;
-  height: 80%;
-  background-color: black;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.plan-info {
-  width: 100%;
-  height: 50%;
-  color: white;
+.plan-feature > div {
+  height: 300px;
+  color: #bbb;
 }
 
 .plan-info > div {
   float: left;
 }
 
+.plan-heading {
+  width: 70%;
+  padding-right: 50px;
+}
+
 .plan-heading > h1 {
-  font-weight: normal;
-  font-size: 30px;
+  color: #fff;
   margin: 0;
 }
 
-.plan-bar {
-  width: 50px;
-  height: 4px;
-  border: none;
-  background-color: #0088cc;
-  margin: 30px 0;
-}
-
-.plan-heading > p {
-  font-weight: normal;
-}
-
-.plan-photo > img {
-  width: 100%;
-  height: 100%;
-}
-
-.history-info {
-  width: 100%;
-  height: 50%;
-  background-color: red;
-}
-
-.plan-heading {
-  width: 60%;
-  height: 100%;
-}
-
 .plan-photo {
-  width: 40%;
-  height: 100%;
-  background-color: brown;
+  width: 30%;
+}
+
+.plan-photo img {
+  height: 265px;
+}
+
+.plan-heading hr.bar,
+.history-info hr.bar {
+  background-color: dodgerblue;
+  display: inline-block;
+}
+
+.history-slider div h4 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: normal;
+  margin: 0;
+  line-height: 1.5em;
+}
+
+.history-slider div span {
+  color: dodgerblue;
+}
+
+.history-slider div h4 p {
+  font-size: 16px;
+  line-height: 1.5em;
+}
+
+/* Slick.js Custom CSS */
+.history-slider .slick-arrow {
+  display: none !important;
+}
+
+.history-slider .slick-dots li {
+  margin: 0;
+}
+
+.history-slider .slick-dots li button::before {
+  font-size: 40px;
+  color: #fff;
 }
 
 /* ----- Section : awards ----- */
@@ -626,16 +607,10 @@ hr.bar {
   padding: 20px;
 }
 
-.contact-form {
-}
-
 .contact-form h3 {
   font-size: 30px;
   font-weight: normal;
   margin: 0;
-}
-
-.send-box {
 }
 
 .send-box label {
@@ -690,9 +665,6 @@ hr.bar {
 
 .send-box button:hover {
   background-color: #000;
-}
-
-.contact-info {
 }
 
 .contact-info h4 {
